--- a/index.html
+++ b/index.html
@@ -46,22 +46,23 @@
               <strong>Hi, I'm Saurabh Chaudhary</strong>
               <span>I'm An Associate Engineer At <a href="https://www.ltts.com/">L&T Technology Services</a></span>
               <h1>Passionate to Learn New Technologies.</h1>
-              <p>An enthusiastic engineering fresher who is always ready to learn new things and integrate technical skills for the growth of the organization.</p>
+              <p>An enthusiastic motivated Java Backend Developer with 8 Months of Experience, Committed to Continuous Learning, Growth, and Contributing My Best Knowledge to Drive Success.</p>
           </div>
       </section>
       <section id="about-me">
           <strong>About Me</strong>
-          <h2>Hello, I'm A Java FullStack Developer.</h2>
+          <h2>Hello, I'm A Java Backend Developer.</h2>
           <div class="about-text">
               <h3>Passionate to Learn New Technologies.</h3>
               <p>My name is <b>Saurabh Chaudhary</b> and I have completed my B.Tech in <b>Computer Science and Information Technology</b> from <b>Dr. A.P.J. Abdul Kalam Technical University</b></p>
-              <p>I have done 2 Internship which helped me to learn new technologies.<b>7 Months
-                      Experience</b> in web Developer.</p>
+              <p>I have done 2 Internship which helped me to learn new technologies.<b>8 Months
+                      Experience</b> in Backend development.</p>
               <p>I have relevant skills in the field software development and hands-on experience on several languages , tools and frameworks.</p>
               <p>I'm open to opportunities where I can contribute with the best of my knowledge while also improving upon my skills to learn and grow .</p>
               <a href="./Saurabh_Chaudhary.pdf" target="_blank">My Resume<i class="fa-solid fa-eye"></i></a>
           </div>
       </section>
+      
       <section id="project">
           <div class="project-heading">
               <div class="project-heading-text">
@@ -93,17 +94,23 @@
             <div class="project-box s-box1">
                 <strong>EduLABS</strong>
                 <p>EduLABS is an Android app that provides interactive lab simulations in various scientific fields, enhancing science education accessibility by offering a safe and cost-effective alternative to traditional labs.</p>
-                <a href="https://drive.google.com/drive/folders/1VeFXubCw4QUZ9QEamGPOndRyvNLXKw3f?usp=sharing">download</a>
+                <a href="https://github.com/saurabhcr007/EduLABs">Github Link</a>
             </div>
             <div class="project-box s-box1">
-                <strong>Quiz Maker</strong>
-                <p>A Quiz Maker is a user-friendly web application that enables user to create quizzes and monitor the responses , and user can also give the quiz with the valid quiz code</p>
-                <a href="./">Link</a>
+                <strong>Quiz Management System</strong>
+                <p>A Quiz Maker is a user-friendly web application that enables user to create quizzes and monitor the responses and can view the past quizzes from dashboard.</p>
+                <a href="https://github.com/saurabhcr007/Quiz-Management-System">Github Link</a>
             </div>
             <div class="project-box s-box1">
                 <strong>Employee Management System</strong>
-                <p>A Quiz Maker is a user-friendly web application that help the admin to monitor the user details , admin can add,delete , modify the employee details . And employee can login to see their profile only.</p>
-                <a href="./">Link</a>
+                <p>It is a web application for monitoring the Employee track of the data for the administration team</p>
+                <a href="https://github.com/saurabhcr007/Employee-Management-System">Github Link</a>
+
+            </div>
+            <div class="project-box s-box1">
+                <strong>Service Management System</strong>
+                <p>It a Service management web application which help the company to monitor service which are for employee adn the vendor which should be providing it.</p>
+                <a href="https://github.com/saurabhcr007/Service-Management-System">Github Link</a>
 
             </div>
           </div>
