--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <strong>Hi, I'm Saurabh Chaudhary</strong>
               <span>I'm An Associate Engineer At <a href="https://www.ltts.com/">L&T Technology Services</a></span>
               <h1>Passionate to Learn New Technologies.</h1>
-              <p>An enthusiastic motivated Java Backend Developer with 8 Months of Experience, Committed to Continuous Learning, Growth, and Contributing My Best Knowledge to Drive Success.</p>
+              <p>An enthusiastic motivated Java Backend Developer with 1 Year of Experience, Committed to Continuous Learning, Growth, and Contributing My Best Knowledge to Drive Success.</p>
           </div>
       </section>
       <section id="about-me">
